--- a/CrudNetCore/appsettings.json
+++ b/CrudNetCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-78B2L79;Database=CrudNetCore;User ID=sa ;Password=Ruperto11;Trusted_Connection=false;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-78B2L79;Database=CrudNetCore;User ID=sa ;Password=//Tu Password va aqui;Trusted_Connection=false;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
